assets/css/styles.css
/* 

Christ Central style guide:
https://www.dropbox.com/s/8rrukcasfc5xumy/CCSF_StyleGuide_July2017.pdf?dl=0

*/

@font-face {
  font-family: 'Gotham';
  src: url('/assets/fonts/Gotham-Light.otf');
}

@font-face {
  font-family: 'Gotham';
  src: url('/assets/fonts/Gotham-Medium.otf');
  font-weight: 700;
}

body {
  font-family: 'Gotham', arial, sans-serif;
}

h1, h2, h3, h4, h5, h6, th {
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 30px;
}

h1 {
  font-size: 46px;
  color: black;
}

h2 {
  font-size: 24px;
}

h3 {
  color: #444444;
  font-size: 18px;
}

h4 {
  color: #444444;
  font-size: 16px;
}

p {
  margin: 0 0 15px;
}

hr {
  border: 1px solid #e4e4e4;
  margin-bottom: 90px;
  margin-top: 90px;
}

img {
  width: 100%;
}

ul {
  padding-left: 0;
}

a, 
a:hover, 
.pagination>li>a,
.pagination>li>a:hover {
  color: #000;
  font-weight: 700;
  text-decoration: underline;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.hide {
  display: none;
}

.text-center {
  text-align: center;
}

.pagination>li>span {
  color: #605E5F;
}

.row {
  margin: 30px 0;
}

.announcement {
  text-align: center;
  width: 100%;
  background: #FAAE4E;
  color: white;
  padding-top: 20px;
  padding-bottom: 20px;
}

.navbar {
  margin-bottom: 0;
}

.navbar-inner a {
  color: black;
  display: block;
  font-weight: 700;
  margin: 0;
}

.navbar-inner .logo {
  line-height: 16px;
  padding: 15px;
  text-transform: uppercase;
  width: 145px;
}

.navbar-inner img {
  display: block;
  height: 30px;
  margin-right: 10px;
  width: auto;
}

.navbar-inner a:hover {
  text-decoration: none;
}

.navbar li a {
  color: #000000;
  font-weight: 700;
  font-size: 12px;
  line-height: 20px;
  margin: 0;
  padding: 15px;
  text-decoration: none;
  text-transform: uppercase;
}

.navbar-nav li .active,
.navbar-nav li .active:hover,
.navbar-nav li a:focus,
.navbar-nav li a:hover {
  background: transparent;
  color: #AAAAAA;
}

.navbar-toggle {
  margin: 15px 5px;
}

.navbar-toggle .icon-bar {
  border: 1px solid #faaf42;
}

.btn-primary {
  background: #000;
  border: 0;
  border-radius: 50px;
  color: #fff;
  font-weight: 700;
  padding: 10px 20px; 
  text-decoration: none;
}

.btn-primary:active,
.btn-primary:focus,
.btn-primary:hover {
  background: #fff;
  border: 1px solid #000;
  border-radius: 50px;
  color: #000000;
  padding: 9px 20px; 
}


.btn-secondary {
  background: #fff;
  border: 1px solid #000;
  border-radius: 50px;
  color: #000;
  font-weight: 700;
  padding: 10px 20px; 
  text-decoration: none;
}

.btn-secondary:active,
.btn-secondary:focus,
.btn-secondary:hover {
  background: #000;
  border: 0;
  border-radius: 50px;
  color: #fff;
  padding: 9px 20px; 
}

.mr--auto {
  margin-right: auto;
}

.mr30 {
  margin-right: 30px;
}

.ml15 {
  margin-left: 15px;
}

.mlm15 {
  margin-left: -15px;
}

.ml30 {
  margin-left: 30px;
}

.ml60 {
  margin-left: 60px;
}

.mb0 {
  margin-bottom: 0;
}

.mb15 {
  margin-bottom: 15px;
}

.mb30 {
  margin-bottom: 30px;
}

.mb60 {
  margin-bottom: 60px;
}

.mb90 {
  margin-bottom: 90px;
}

.mb120 {
  margin-bottom: 90px;
}

.mt0 {
  margin-top: 0;
}

.mt15 {
  margin-top: 15px;
}

.mt30 {
  margin-top: 30px;
}

.mt60 {
  margin-top: 60px;
}

.mv60 {
  margin: 60px 0;
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex__align-self--center {
  align-self: center;
}

.flex-justify-center {
  justify-content: center;
}

.quote {
  color: #aaa;
  font-weight: 400;
  font-size: 32px;
  padding: 60px 0;
  text-transform: none;
}

h2.quote {
  color: #faaf42;
  padding: 0;
}

p.quote {
  margin-bottom: 0;
}

.pt0 {
  padding-top: 0;
}

.servants-list li {
  list-style: none;
}

.table-responsive {
  border: 0;
}

.table>thead>tr>th,
.table>tbody>tr>td {
  border: 0;
}

.dynatable-search.col-sm-4,
.dynatable-per-page.col-sm-1 {
  display: inline-block;
  float: none;
}

.dynatable-search.col-sm-4 {
  margin-left: -15px;
}

#sermons {
  margin-top: 20px;
}

.pagination {
  margin-top: 0;
}

.dynatable-record-count {
  display: block;
  margin-bottom: 10px;
}

label {
  font-weight: normal;
}

footer {
  background: #000;
  color: #FFFFFF;
  margin-top: 90px;
}

footer .huge-link-container {
  height: 200px;
}

@media (max-width: 767px) {
  footer .huge-link-container {
    flex-direction: column;
    height: auto;
  }
}

footer .huge-link {
  flex: 1;
  text-decoration: none;
}

footer .link-content {
  justify-content: center;
  margin-top: 50px;
}

footer .link-content img {
  width: 64px;
  height: 64px;
}

footer .container {
  padding: 60px 30px;
}

footer h3, footer a, footer a:hover {
  color: #FFFFFF;
}

footer ul {
  padding: 0;
}

footer li {
  float: left;
  font-size: 21px;
  line-height: 21px;
  list-style: none;
  margin-right: 10px;
}

.two-column {
  column-count: 2;
}

@media (max-width: 992px) {
  #sermon h2 {
    font-size: 70px;
    padding: 40px;
  }

  .two-column {
    column-count: 1;
  }
}

@media (min-width: 768px) {
  .navbar-nav {
    float: right !important;
  }

  .section {
    margin: 90px auto;
    width: 60%;
  }
}

@media (max-width: 768px) {
  #sermon h2 {
    font-size: 28px;
  }
}

@media (min-width: 415px) {
  .mobile-only {
    display: none;
  }
}

/* Program */

#page-Program hr {
  border-color: #FEDB48;
  border-width: 7px;
  margin: 20px 0;
}

#page-Program h3 {
  font-size: 14px;
  margin: 0;
}

#page-Program .quote {
  color: #aaa;
  font-size: 18px;
}

#page-Program ol {
  font-weight: bold;
  padding: 0;
  text-transform: uppercase;
}

#page-Program li {
  list-style: none;
  margin: 0 0 10px 0;
}

#page-Program .subtext {
  font-size: 11px;
  font-weight: normal;
}

#page-Program span.subtext {
  white-space: nowrap;
}

#page-Program .divider {
  color: #FEDB48;
}

#page-Program .std {
  display: inline-block;
  width: 60px;
}

#page-Program td {
  font-size: 12px;
  padding: 0;
  text-transform: uppercase;
}

#page-Program p {
  font-size: 12.5px;
}

#page-Program .social-media .online {
  font-size: 24px;
}

#page-Program footer,
.print-only,
.print .online,
#page-Program.print #sunday-worship hr {
  display: none;
}

.print .print-only {
  display: inline;
}

@media print {
  #page-Program.print .page { 
    float: left;  
    width: 4.05in;  
  } 

  #page-Program.print .back.page {  
    float: right; 
    margin-left: .20in; 
  } 
}

#page-Program.print .row {
  margin: 20px 0;
}

#page-Program.print h2 {
  margin: 15px 0 20px;
}

#page-Program.print img {
  margin-bottom: 15px;
  width: 125px;
}

#page-Program.print #connect .version {
  margin-bottom: 0;
}

@media print {
  a[href]:after {
    content: none !important;
  }

  .col-lg-6 {
    float: left;
  }
}

.worship-item {
  height: 610px;
}

.header-banner-title-center {
  color: black;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header-banner-title {
  color: white;
  top: 130px;
  left: 100px;
}

@media (max-width: 767px) {
  .header-banner-title {
    font-size: 16px;
    top: 30px;
    left: 30px;
  }
}

/* Counseling */
#page-Counseling ul {
  padding-left: 16px;
}

#page-Counseling .img--icon {
  width: 50px;
}

@media (min-width: 768px) {
  .two-columns {
    display: flex;
    justify-content: flex-end;
  }
}

@media (min-width: 992px) {
  .three-columns {
    display: flex;
    justify-content: space-between;
  }
}

.hr--transparent {
  border-color: transparent;
  margin-top: 0;
}

.three-steps {
  background-color: #f1edea;
  padding: 60px 30px 0 30px;
}

.three-steps .step {
  background-color: #fff;
  padding: 30px;
  height: 250px;
  margin: 0 60px 60px 0;
}

.three-steps .step:last-of-type {
  margin-right: 0;
}

/* Why Give */
#page-WhyGive span {
  white-space: nowrap;
}

/* Discipeship */
/* FiCB */
.ficb-banner-inner,
.discipleship-hero-inner {
  position: absolute;
  top: 0;
  left: 0;
  margin: 60px 0 0 60px;
  width: 25%;
}

@media (max-width: 992px) {
  .ficb-banner-inner,
  .discipleship-hero-inner {
    margin: 30px 0 0 30px;
    width: 40%;
  }
}

@media (max-width: 767px) {
  .ficb-banner-inner,
  .discipleship-hero-inner {
    position: relative;
    margin: 60px 0 0 0;
    width: 100%;
  }
}

.ficb-icon,
.discipleship-icon {
  width: 50px;
}

.pillars-icon {
  width: 125px;
}

.ficb-banner-inner {
  color: #fff;
}

@media (max-width: 767px) {
  .ficb-banner-inner {
    color: black;
  }
}

.video-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}
.video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

